# holdem-eval

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt  holdem-eval.cpp
src/OMPEval/omp/: CMakeLists.txt  Constants.h
